# game_of_life

./: .gitignore  Cargo.toml  README.md
assets/shaders/: game_of_life.wgsl
game_libs/: Cargo.toml
game_libs/src/: lib.rs
game_libs/src/components/: coordinates.rs
game_libs/src/resources/: map_options.rs  mod.rs  tile.rs  tile_map.rs
shaderlibs/: Cargo.toml
shaderlibs/src/: lib.rs
src/: compute_shader.rs  data.rs  main.rs
