[package]
name = "game_of_life"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["bevy-inspector-egui"]

[dependencies]
nalgebra-glm = "0.18.0"
# bevy = "0.9.1" #TODO Uncomment before building for static libraries 
bevy = { version = "0.9.1", features = ["dynamic"] } #TODO Comment before building
rayon = "1.6.1"
rand = "0.8.5"

game_libs = { path = "game_libs" }

bevy-inspector-egui = { version = "0.17.0", optional = true }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1


# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace]
members = [
    "game_libs"
]